--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -32,12 +32,13 @@
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form class="needs-validation" novalidate>
+                                    <form class="needs-validation" novalidate th:action="@{user/create}" method="post" th:object="${user}">
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="firstname" class="col-form-label">First Name</label>
-                                                    <input id="firstname" type="text" placeholder="first name" class="form-control" required>
+                                                    <input id="firstname" type="text" placeholder="first name" th:field="*{firstName}"
+                                                           class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter first name.
                                                     </div>
@@ -47,7 +48,8 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="lastname" class="col-form-label">Last Name</label>
-                                                    <input id="lastname" type="text" placeholder="last name" class="form-control" required>
+                                                    <input id="lastname" type="text" placeholder="last name" th:field="*{lastName}"
+                                                           class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter last name.
                                                     </div>
@@ -58,8 +60,10 @@
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
-                                                    <label for="emailaddress" class="col-form-label">Email Address</label>
-                                                    <input id="emailaddress" type="email" placeholder="email address" class="form-control" required>
+                                                    <label for="emailaddress" class="col-form-label">Email
+                                                        Address</label>
+                                                    <input id="emailaddress" type="email" placeholder="email address" th:field="*{userName}"
+                                                           class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter email.
                                                     </div>
@@ -69,7 +73,8 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="phonenumber" class="col-form-label">Phone Number</label>
-                                                    <input id="phonenumber" type="tel" placeholder="phone number" class="form-control"  pattern="^\d{10}$" required>
+                                                    <input id="phonenumber" type="tel" placeholder="phone number" th:field="*{phone}"
+                                                           class="form-control" pattern="^\d{10}$" required>
                                                     <div class="invalid-feedback">
                                                         Please enter 10 digit mobile number.
                                                     </div>
@@ -81,10 +86,12 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="password" class="col-form-label">Password</label>
-                                                    <input id="password" type="password" placeholder="password" class="form-control"
+                                                    <input id="password" type="password" placeholder="password" th:field="*{passWord}"
+                                                           class="form-control"
                                                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" required>
                                                     <div class="invalid-feedback">
-                                                        Must contain at least one number and one uppercase and lowercase letter, and at least 4 or more characters"
+                                                        Must contain at least one number and one uppercase and lowercase
+                                                        letter, and at least 4 or more characters"
                                                     </div>
                                                 </div>
                                             </div>
@@ -92,10 +99,12 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="repassword" class="col-form-label">Password</label>
-                                                    <input id="repassword" type="password" placeholder="confirm your password" class="form-control"
+                                                    <input id="repassword" type="password"
+                                                           placeholder="confirm your password" th:field="*{passWord}" class="form-control"
                                                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" required>
                                                     <div class="invalid-feedback">
-                                                        Must contain at least one number and one uppercase and lowercase letter, and at least 4 or more characters"
+                                                        Must contain at least one number and one uppercase and lowercase
+                                                        letter, and at least 4 or more characters"
                                                     </div>
                                                 </div>
                                             </div>
@@ -106,10 +115,14 @@
                                                 <div class="form-group">
                                                     <label>Gender</label><br>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" checked="" class="custom-control-input"><span class="custom-control-label">Male</span>
+                                                        <input type="radio" name="radio-inline" checked="" th:field="*{gender}" th:value="Male"
+                                                               class="custom-control-input"><span
+                                                            class="custom-control-label">Male</span>
                                                     </label>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" class="custom-control-input"><span class="custom-control-label">Female</span>
+                                                        <input type="radio" name="radio-inline" th:field="*{gender}" th:value="Male"
+                                                               class="custom-control-input"><span
+                                                            class="custom-control-label">Female</span>
                                                     </label>
 
                                                 </div>
@@ -118,11 +131,11 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
-                                                    <select name="roleid" id="roleid" class="custom-select" required="required">
-                                                        <option value="select" selected="selected">Select</option>
-                                                        <option value="admin">Admin</option>
-                                                        <option value="manager">Manager</option>
-                                                        <option value="employee">Employee</option>
+                                                    <select name="roleid" id="roleid" th:field="*{role}" class="custom-select"
+                                                            required="required">
+                                                        <option th:value=" ''" th:text="Select"></option>
+                                                        <option th:each="role: ${}"
+
                                                     </select>
                                                 </div>
                                             </div>
@@ -148,7 +161,6 @@
                     </div>
 
                 </div>
-
 
 
                 <!-- ------------------------TABLE START----------------------------- -->
@@ -181,8 +193,14 @@
                                                 <td>2022023333</td>
                                                 <td>Employee</td>
                                                 <td class="actions">
-                                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button></a>
-                                                    <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
+                                                    <a href="">
+                                                        <button type="button" class="btn btn-warning btn-sm">Update
+                                                        </button>
+                                                    </a>
+                                                    <a href="" class="delete-row">
+                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
+                                                        </button>
+                                                    </a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -192,8 +210,14 @@
                                                 <td>2022023333</td>
                                                 <td>Employee</td>
                                                 <td class="actions">
-                                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button></a>
-                                                    <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
+                                                    <a href="">
+                                                        <button type="button" class="btn btn-warning btn-sm">Update
+                                                        </button>
+                                                    </a>
+                                                    <a href="" class="delete-row">
+                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
+                                                        </button>
+                                                    </a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -203,8 +227,14 @@
                                                 <td>2022023333</td>
                                                 <td>Employee</td>
                                                 <td class="actions">
-                                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button></a>
-                                                    <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
+                                                    <a href="">
+                                                        <button type="button" class="btn btn-warning btn-sm">Update
+                                                        </button>
+                                                    </a>
+                                                    <a href="" class="delete-row">
+                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
+                                                        </button>
+                                                    </a>
                                                 </td>
                                             </tr>
                                             </tbody>
