--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -32,13 +32,12 @@
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form class="needs-validation" novalidate th:action="@{user/create}" method="post" th:object="${user}">
+                                    <form class="needs-validation" novalidate th:action="@{/user/create}" method="post" th:object="${user}" >
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="firstname" class="col-form-label">First Name</label>
-                                                    <input id="firstname" type="text" placeholder="first name" th:field="*{firstName}"
-                                                           class="form-control" required>
+                                                    <input id="firstname" type="text" placeholder="first name" th:field="*{firstName}" class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter first name.
                                                     </div>
@@ -48,8 +47,7 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="lastname" class="col-form-label">Last Name</label>
-                                                    <input id="lastname" type="text" placeholder="last name" th:field="*{lastName}"
-                                                           class="form-control" required>
+                                                    <input id="lastname" type="text" placeholder="last name" th:field="*{lastName}" class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter last name.
                                                     </div>
@@ -60,10 +58,8 @@
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
-                                                    <label for="emailaddress" class="col-form-label">Email
-                                                        Address</label>
-                                                    <input id="emailaddress" type="email" placeholder="email address" th:field="*{userName}"
-                                                           class="form-control" required>
+                                                    <label for="emailaddress" class="col-form-label">Email Address</label>
+                                                    <input id="emailaddress" type="text" placeholder="email address" th:field="*{userName}" class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter email.
                                                     </div>
@@ -73,8 +69,7 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="phonenumber" class="col-form-label">Phone Number</label>
-                                                    <input id="phonenumber" type="tel" placeholder="phone number" th:field="*{phone}"
-                                                           class="form-control" pattern="^\d{10}$" required>
+                                                    <input id="phonenumber" type="tel" placeholder="phone number" th:field="*{phone}" class="form-control"  pattern="^\d{10}$" required>
                                                     <div class="invalid-feedback">
                                                         Please enter 10 digit mobile number.
                                                     </div>
@@ -86,12 +81,10 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="password" class="col-form-label">Password</label>
-                                                    <input id="password" type="password" placeholder="password" th:field="*{passWord}"
-                                                           class="form-control"
+                                                    <input id="password" type="password" placeholder="password" th:field="*{passWord}" class="form-control"
                                                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" required>
                                                     <div class="invalid-feedback">
-                                                        Must contain at least one number and one uppercase and lowercase
-                                                        letter, and at least 4 or more characters"
+                                                        Must contain at least one number and one uppercase and lowercase letter, and at least 4 or more characters"
                                                     </div>
                                                 </div>
                                             </div>
@@ -99,12 +92,10 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="repassword" class="col-form-label">Password</label>
-                                                    <input id="repassword" type="password"
-                                                           placeholder="confirm your password" th:field="*{passWord}" class="form-control"
+                                                    <input id="repassword" type="password" placeholder="confirm your password" th:field="*{passWord}" class="form-control"
                                                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" required>
                                                     <div class="invalid-feedback">
-                                                        Must contain at least one number and one uppercase and lowercase
-                                                        letter, and at least 4 or more characters"
+                                                        Must contain at least one number and one uppercase and lowercase letter, and at least 4 or more characters"
                                                     </div>
                                                 </div>
                                             </div>
@@ -115,14 +106,10 @@
                                                 <div class="form-group">
                                                     <label>Gender</label><br>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" checked="" th:field="*{gender}" th:value="Male"
-                                                               class="custom-control-input"><span
-                                                            class="custom-control-label">Male</span>
+                                                        <input type="radio" name="radio-inline" checked="" th:field="*{gender}" th:value="Male" class="custom-control-input"><span class="custom-control-label">Male</span>
                                                     </label>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" th:field="*{gender}" th:value="Male"
-                                                               class="custom-control-input"><span
-                                                            class="custom-control-label">Female</span>
+                                                        <input type="radio" name="radio-inline" th:field="*{gender}" th:value="Female" class="custom-control-input"><span class="custom-control-label">Female</span>
                                                     </label>
 
                                                 </div>
@@ -131,10 +118,9 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
-                                                    <select name="roleid" id="roleid" th:field="*{role}" class="custom-select"
-                                                            required="required">
+                                                    <select th:field="*{role}" class="custom-select" required="required">
                                                         <option th:value=" ''" th:text="Select"></option>
-                                                        <option th:each="role: ${}"
+                                                        <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
 
                                                     </select>
                                                 </div>
@@ -163,6 +149,7 @@
                 </div>
 
 
+
                 <!-- ------------------------TABLE START----------------------------- -->
 
                 <div class="row">
@@ -185,58 +172,21 @@
                                                 <th scope="col">Action</th>
                                             </tr>
                                             </thead>
+
                                             <tbody>
-                                            <tr>
-                                                <td>Ozzy</td>
-                                                <td>ozzy@cybertekschool.com</td>
-                                                <td>Male</td>
-                                                <td>2022023333</td>
-                                                <td>Employee</td>
+
+                                            <tr th:each="user : ${users}">
+                                                <td th:text="${user.firstName + ' ' + user.lastName}"></td>
+                                                <td th:text="${user.userName}"></td>
+                                                <td th:text="${user.gender}"></td>
+                                                <td th:text="${user.phone}"></td>
+                                                <td th:text="${user.role.description}"></td>
                                                 <td class="actions">
-                                                    <a href="">
-                                                        <button type="button" class="btn btn-warning btn-sm">Update
-                                                        </button>
-                                                    </a>
-                                                    <a href="" class="delete-row">
-                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
-                                                        </button>
-                                                    </a>
+                                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button></a>
+                                                    <a href="" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <td>Ozzy</td>
-                                                <td>ozzy@cybertekschool.com</td>
-                                                <td>Male</td>
-                                                <td>2022023333</td>
-                                                <td>Employee</td>
-                                                <td class="actions">
-                                                    <a href="">
-                                                        <button type="button" class="btn btn-warning btn-sm">Update
-                                                        </button>
-                                                    </a>
-                                                    <a href="" class="delete-row">
-                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
-                                                        </button>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>Ozzy</td>
-                                                <td>ozzy@cybertekschool.com</td>
-                                                <td>Male</td>
-                                                <td>2022023333</td>
-                                                <td>Employee</td>
-                                                <td class="actions">
-                                                    <a href="">
-                                                        <button type="button" class="btn btn-warning btn-sm">Update
-                                                        </button>
-                                                    </a>
-                                                    <a href="" class="delete-row">
-                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
-                                                        </button>
-                                                    </a>
-                                                </td>
-                                            </tr>
+
                                             </tbody>
                                         </table>
                                     </div>
